k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-backend
  namespace: backend
  labels:
    app: application-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application-backend
  template:
    metadata:
      labels:
        app: application-backend
    spec:
      containers:
        - name: application-backend
          image: eugeneowner/application-backend:v1.3
          imagePullPolicy: Always
          workingDir: /app
          ports:
            - containerPort: 8080
