k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-backend
  namespace: backend
spec:
  selector:
    app: application-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
